--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -26,6 +26,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
 }
 
 .about h3 {
@@ -44,4 +45,21 @@
 .about p {
     color: #676767;
     margin-bottom: 15px;
+}
+
+/* Media Query */
+
+@media(max-width: 800px) {
+    .about {
+        flex-direction: column-reverse;
+    }
+
+    .about-left {
+        flex-basis: 100%;
+        margin: 20px;
+    }
+
+    .about-right {
+        flex-basis: 100%;
+    }
 }
